tests/baselines/reference/propertyAccessibility1.errors.txt
tests/cases/compiler/propertyAccessibility1.ts(5,1): error TS8010: Property 'privProp' is private and only accessible within struct 'Foo'.


==== tests/cases/compiler/propertyAccessibility1.ts (1 errors) ====
    class Foo {
      private privProp = 0;
    }
    var f = new Foo();
    f.privProp;
    ~~~~~~~~~~
!!! error TS8010: Property 'privProp' is private and only accessible within struct 'Foo'.
    